syntax = "proto3";

package users;

message UserRequest {
  string id = 1;
  string name = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
}

service UserService {
  rpc createUser(UserRequest) returns(UserResponse){}
}